bpo-33026: Fix jumping out of "with" block by setting f_lineno.